# whitelist

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml
app/: config.py  db.py  main.py  tasks.py  w3.py
contract/: contract.py
